- New: Reorganize tabs on third parties.
- Perf: Avoid reading database to determine country code after each
        page call.
- Fix: Better Postgresql compatibility.
- Fix: Box order is saved when moved.
- Fix: Database name can contains "-" characters.
- Fix: In coloring negative amounts.
- Fix: Date input use date format of user and not dd/mm/yyyy format.

For translators:
- New: Update and complete slovenian language sl_SL.

For developers:
- New: Add jquery by default.
- New: Removed PWC libraries.
- New: Removed Scriptaculous libraries.
- New: Add first Selenium GUI tests.
- New: Enhance a lot of internal function to build external modules
       more easily.
- Qual: Menu system code is simpler.
- Qual: Mutualize some duplicate code.
- Qual: Renamed some fields into database to be more internationnal.
- Qual: Removed deprecated code.


***** ChangeLog for 2.9 compared to 2.8 *****

For users:
- New: POS module allow to choose which warehouse to use.
- New: Support "Department/State" field on company setup, contact, 
       bank account and members card.
- New: Can reopen a refused/canceled supplier order.
- New: Add Gant diagramm on project module.
- New: Add a new mode for automatic stock increase: Can be increased
       on dispatching of products from a supplier order receipt.
- New: Can set a past delay to limit calendar export.
- New: Can attach files on emailing campaigns.
- New: Add statistics on trips and expenses module.
- New: Can reopen a closed customer order.
- New: Add module externalsite to add a web site/tools inside 
       menu and a Dolibarr frame.
- New: Can link trips and fees to a project.
- New: Add civility title in foundation module.
- New: Can set accountancy code for product (buy and sell).
- New: Can filter third parties lists on categories.
- New: Can filter products and services lists on categories.
- New: task #10202 : Support categories for members.